rutes_api_films_working_in_front

--- a/views/header.pug
+++ b/views/header.pug
@@ -8,4 +8,4 @@ html(lang="en")
         title Document
     body 
         header 
-            p.header Funciono
+            p.header I´m the header
