add_any_css_styles_&_fixed_try_catch_from_routes_to_controller

--- a/views/header.pug
+++ b/views/header.pug
@@ -6,6 +6,5 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/style.css")
         title Document
-    body 
-        header 
-            p.header I´m the header
+    header 
+        p.header 
