--- a/views/home.pug
+++ b/views/home.pug
@@ -1,2 +1,11 @@
 include ./header.pug
-
+main.main__container
+    section.main__section
+        img.main__img(src="assets/form_bg.jpg")
+        p.main__title1 WELLCOME TO
+        p.main__title2 YOUR MOVIE DB
+        button.home__signup__button(type="click") SIGN UP
+        button.home__login__button(type="click") LOG IN
+        button.home__google__button(type="click") GOOGLE
+        img.main__gif(src="assets/gif_home_ok.gif", type="gif")
+include ./footer.pug
