--- a/views/login.pug
+++ b/views/login.pug
@@ -8,6 +8,7 @@ main.main__container
         input.mail__imput(type="text", placeholder="Please, enter your email", required) 
         P.pass__description PASSWORD :
         input.pass__imput(type="password", placeholder="Please, enter your password", required) 
+        a.forgot__pass Forgot Password?
         button.login__button(type="submit") LOG IN
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
 include ./footer.pug
