--- a/views/signup.pug
+++ b/views/signup.pug
@@ -6,9 +6,10 @@ main.main__container
         p.main__title2 ENJOY MOVIES
         P.mail__description EMAIL :
         input.mail__imput(type="text", placeholder="Please, enter your email", required) 
-        P.pass__description PASSWORD :
+        P.pass__description PASSWORD 1 :
         input.pass__imput(type="password", placeholder="Please, enter your password", required) 
-        a.forgot__pass Forgot Password?
+        P.pass__description PASSWORD 2 :
+        input.pass__imput(type="password", placeholder="Please, repeat password", required) 
         button.signup__button(type="submit") SIGN UP
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
 include ./footer.pug
