--- a/views/search_one.pug
+++ b/views/search_one.pug
@@ -3,4 +3,9 @@ include ./header.pug
 p.search__title= films.Title
 p.search__year= films.Year
 p.search__type= films.Type
+p.search__genre= films.Genre
+p.search__runtime= films.Runtime
+p.search__actors= films.Actors
+p.search__plot= films.Plot
+p.search__imdbratings= films.imdbRating
 img.search__img(src=`${films.Poster}`)
