--- a/views/header.pug
+++ b/views/header.pug
@@ -6,5 +6,6 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/css/styles.css")
         title Document
-    header 
-        p.header 
+    body 
+        header 
+            p.header 
