--- a/views/home.pug
+++ b/views/home.pug
@@ -6,6 +6,5 @@ main.main__container
         p.main__title2 YOUR MOVIE DB
         button.home__signup__button(type="click") SIGN UP
         button.home__login__button(type="click") LOG IN
-        button.home__google__button(type="click") GOOGLE
+        button.home__google__button(type="click") LOGIN WITH GOOGLE
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
-include ./footer.pug
