--- a/views/search_title.pug
+++ b/views/search_title.pug
@@ -1,6 +1,12 @@
 include ./header.pug 
+
 each val in films.Search
-    p.search__title= val.Title
-    p.search__year= val.Year
-    p.search__type= val.Type
-    img.search__img(src=`${val.Poster}`)
+    main.main__container
+        img.search__bg__img(src="/assets/form_bg.jpg")
+        section.films__section
+        p.search__title= val.Title.toUpperCase()
+        p.search__year= `${val.Year} / ${val.Type.toUpperCase()}`
+        img.search__img(src=`${val.Poster}`)
+        div.search__botton__container
+            button.addFavorites__button(type="click") ADD FAVORITES
+            button.viewMore__button(type="click") VIEW MORE
