--- a/views/header_search_list.pug
+++ b/views/header_search_list.pug
@@ -7,5 +7,6 @@ html(lang="en")
         link(rel="stylesheet", href="/css/styles.css")
         title Document
     body 
-        header.header 
-            
+        header.header__search
+            input.search__searcher__input(type="text" placeholder="Search for a title") 
+            button.search__searcher__button(type="submit") GO
