--- a/views/login.pug
+++ b/views/login.pug
@@ -5,9 +5,11 @@ main.main__container
         p.main__title1 LOG IN AND KEEP
         p.main__title2 ON ENJOING
         P.mail__description EMAIL :
-        input.mail__imput(type="text", placeholder="Please, enter your email", required) 
+        input.mail__input(type="text", placeholder="Please, enter your email", required) 
         P.pass__description PASSWORD :
-        input.pass__imput(type="password", placeholder="Please, enter your password", required) 
+        input.pass__input(type="password", placeholder="Please, enter your password", required) 
         a.forgot__pass Forgot Password?
         button.login__button(type="submit") LOG IN
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
+a.favorites__link(href="http://localhost:3000/")
+    button.gofavorites__button(type="click") BACK HOME
