--- a/views/signup.pug
+++ b/views/signup.pug
@@ -5,10 +5,12 @@ main.main__container
         p.main__title1 SIGN UP & 
         p.main__title2 ENJOY MOVIES
         P.mail__description EMAIL :
-        input.mail__imput(type="text", placeholder="Please, enter your email", required) 
+        input.mail__input(type="text", placeholder="Please, enter your email", required) 
         P.pass__description PASSWORD 1 :
-        input.pass__imput(type="password", placeholder="Please, enter your password", required) 
+        input.pass__input(type="password", placeholder="Please, enter your password", required) 
         P.pass__description PASSWORD 2 :
-        input.pass__imput(type="password", placeholder="Please, repeat password", required) 
+        input.pass__input(type="password", placeholder="Please, repeat password", required) 
         button.signup__button(type="submit") SIGN UP
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
+a.favorites__link(href="http://localhost:3000/")
+    button.gofavorites__button(type="click") BACK HOME
