--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,13 +1,35 @@
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
   font-family: "Montserrat", sans-serif;
   margin: 0px;
-  background: linear-gradient(-45deg, #b4b4b4 0%, white 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#b4b4b4), color-stop(50%, white), to(#b4b4b4));
+  background: linear-gradient(90deg, #b4b4b4 0%, white 50%, #b4b4b4 100%);
   height: 100vw;
 }
 
+.header__search,
 .header,
 .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 0;
+  left: 0;
   position: fixed;
   margin: 0px;
   width: 100vw;
@@ -19,9 +41,41 @@ body {
   border-radius: 0px;
 }
 
+.header__search {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
+}
+
+.separador_up {
+  padding: 20px;
+}
+
+.separador_down {
+  padding: 30px;
+}
+
+.favorites__link {
+  position: fixed;
+  bottom: 15px;
+}
+
+.favorites__link .gofavorites__button {
+  color: white;
+  border: transparent;
+  width: 230px;
+  height: 25px;
+  border-radius: 50px;
+  font-weight: 400;
+  cursor: pointer;
+  background: #f9844a;
+  -webkit-box-shadow: 0px 0px 3px #ffffffbc;
+          box-shadow: 0px 0px 3px #ffffffbc;
 }
 
 .main__container {
@@ -39,7 +93,7 @@ body {
   height: 445px;
 }
 
-.main__section {
+.main__container .main__section {
   width: 300px;
   height: 424px;
   margin-top: 20px;
@@ -58,7 +112,7 @@ body {
           flex-flow: column;
 }
 
-.main__img {
+.main__container .main__section .main__img {
   position: absolute;
   z-index: -10;
   border-radius: 5px;
@@ -69,14 +123,8 @@ body {
           box-shadow: 0px 8px 13px #000000be;
 }
 
-.main__gif {
-  width: 300px;
-  height: 30%;
-  opacity: 25%;
-}
-
-.main__title1,
-.main__title2 {
+.main__container .main__section .main__title1,
+.main__container .main__section .main__title2 {
   font-size: 20px;
   margin: 0;
   color: white;
@@ -84,12 +132,18 @@ body {
   font-weight: 800;
 }
 
-.main__title1 {
+.main__container .main__section .main__title1 {
   margin-top: 30px;
 }
 
-.home__signup__button,
-.home__login__button {
+.main__container .main__section .main__gif {
+  width: 300px;
+  height: 30%;
+  opacity: 25%;
+}
+
+.main__container .main__section .home__signup__button,
+.main__container .main__section .home__login__button {
   color: white;
   margin: 13px;
   border: transparent;
@@ -99,6 +153,36 @@ body {
   background-color: rgba(255, 255, 255, 0.5);
   font-weight: 400;
   cursor: pointer;
+}
+
+.main__container .main__section .home__google__button {
+  color: white;
+  margin: 13px;
+  border: transparent;
+  width: 230px;
+  height: 25px;
+  border-radius: 50px;
+  font-weight: 400;
+  cursor: pointer;
+  margin-bottom: 30px;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.main__container .main__section .home__signup__button {
+  margin-top: 30px;
+}
+
+.main__container .main__section .home__signup__button:hover,
+.main__container .main__section .home__login__button:hover {
+  font-weight: 600;
+  background-color: #f9844a;
+}
+
+.main__container .main__section .home__google__button:hover {
+  color: white;
+  border: #e0e1dd solid 1px;
+  font-weight: 600;
+  background: linear-gradient(40deg, #3e80ee 0%, #00ff83 25%, #ffbc00 52%, #db4437 85%);
 }
 
 .signup__button,
@@ -114,38 +198,8 @@ body {
   cursor: pointer;
 }
 
-.home__google__button {
-  color: white;
-  margin: 13px;
-  border: transparent;
-  width: 230px;
-  height: 25px;
-  border-radius: 50px;
-  font-weight: 400;
-  cursor: pointer;
-  margin-bottom: 30px;
-  background: rgba(255, 255, 255, 0.5);
-}
-
-.home__signup__button {
-  margin-top: 30px;
-}
-
-.home__signup__button:hover,
-.home__login__button:hover {
-  font-weight: 600;
-  background-color: #f9844a;
-}
-
-.home__google__button:hover {
-  color: white;
-  border: #e0e1dd solid 1px;
-  font-weight: 600;
-  background: linear-gradient(40deg, #3e80ee 0%, #00ff83 25%, #ffbc00 52%, #db4437 85%);
-}
-
-.pass__imput,
-.mail__imput {
+.pass__input,
+.mail__input {
   color: white;
   margin: 3px 0px 13px;
   border: transparent;
@@ -157,28 +211,30 @@ body {
   transition: 0.3s;
   width: 220px;
   padding: 0px 0px 0px 10px;
+  border: none;
+  outline: 0;
 }
 
-.pass__imput::-webkit-input-placeholder,
-.mail__imput::-webkit-input-placeholder {
+.pass__input::-webkit-input-placeholder,
+.mail__input::-webkit-input-placeholder {
   color: #e0e1dd;
   font-size: 10px;
 }
 
-.pass__imput:-ms-input-placeholder,
-.mail__imput:-ms-input-placeholder {
+.pass__input:-ms-input-placeholder,
+.mail__input:-ms-input-placeholder {
   color: #e0e1dd;
   font-size: 10px;
 }
 
-.pass__imput::-ms-input-placeholder,
-.mail__imput::-ms-input-placeholder {
+.pass__input::-ms-input-placeholder,
+.mail__input::-ms-input-placeholder {
   color: #e0e1dd;
   font-size: 10px;
 }
 
-.pass__imput::placeholder,
-.mail__imput::placeholder {
+.pass__input::placeholder,
+.mail__input::placeholder {
   color: #e0e1dd;
   font-size: 10px;
 }
@@ -201,16 +257,136 @@ body {
   font-size: 10px;
 }
 
-.search__bg__img {
-  margin-top: 40px;
+.dashboard__search__button,
+.dashboard__logout__button,
+.dashboard__mymovies__button {
+  color: white;
+  border: transparent;
+  width: 230px;
+  height: 25px;
+  border-radius: 50px;
+  font-weight: 400;
+  cursor: pointer;
+  margin-bottom: 30px;
+  background: rgba(255, 255, 255, 0.5);
+}
+
+.dashboard__search__button {
+  margin-top: 30px;
+}
+
+.dashboard__search__button:hover,
+.dashboard__mymovies__button:hover {
+  font-weight: 600;
+  background: #f9844a;
+}
+
+.dashboard__logout__button:hover {
+  font-weight: 600;
+  background: #d63333;
+}
+
+.search__searcher__input {
+  color: white;
+  border: transparent;
+  height: 25px;
+  border-radius: 50px;
+  margin: 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  width: 220px;
+  padding: 0px 0px 0px 10px;
+  border: none;
+  outline: 0;
+}
+
+.search__searcher__input::-webkit-input-placeholder {
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.search__searcher__input:-ms-input-placeholder {
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.search__searcher__input::-ms-input-placeholder {
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.search__searcher__input::placeholder {
+  color: #ffffff;
+  font-size: 12px;
+}
+
+.search__searcher__button {
+  color: white;
+  margin: 5px;
+  border: transparent;
+  width: 50px;
+  height: 25px;
+  border-radius: 50px;
+  background-color: #f9844ae3;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.search__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  margin-top: 20px;
+  height: 445px;
+}
+
+.search__container .search__bg__img {
+  margin-top: 20px;
   width: 300px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 8px 13px #000000be;
           box-shadow: 0px 8px 13px #000000be;
 }
 
-.search__year,
-.search__type {
+.search__container .films__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  margin-top: -425px;
+  height: 420px;
+}
+
+.search__container .films__section .search__title {
+  color: white;
+  width: 270px;
+  margin: 15px 0px 0px;
+  font-size: 18px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.search__container .films__section .search__year,
+.search__container .films__section .search__type {
   color: #e0e1dd;
   width: 270px;
   margin: 5px;
@@ -219,28 +395,16 @@ body {
   font-weight: 800;
 }
 
-.search__title {
-  color: white;
-  width: 270px;
-  margin: 15px 0px 0px;
-  font-size: 18px;
-  text-align: center;
-  font-weight: 800;
-}
-
-.search__img {
+.search__container .films__section .search__img {
   border: 1px solid white;
   border-radius: 5px;
   height: 250px;
+  max-width: 250px;
   -webkit-box-shadow: 0px 0px 8px #ffffff80;
           box-shadow: 0px 0px 8px #ffffff80;
 }
 
-.films__section {
-  margin-top: -420px;
-}
-
-.search__botton__container {
+.search__container .films__section .search__botton__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -250,6 +414,415 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 10px;
+}
+
+.search__container .films__section .viewMore__button {
+  color: white;
+  margin: 13px;
+  border: transparent;
+  width: 120px;
+  height: 30px;
+  border: #ffffff solid 1px;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.search__container .films__section .viewMore__button:hover {
+  font-weight: 600;
+  background-color: #f9844a;
+}
+
+.addFavorites {
+  padding: 0px;
+  margin: 12px;
+  height: 30px;
+  border: transparent;
+  background-color: transparent;
+}
+
+.addFavorites .addFavorites__button {
+  width: 30px;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.addFavorites .addFavorites__button:hover {
+  -webkit-filter: drop-shadow(0 0px 5px #f9844a);
+          filter: drop-shadow(0 0px 5px #f9844a);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.addFavorites .addFavorites__button:active {
+  -webkit-transform: scale(1.1) rotateY(360deg);
+          transform: scale(1.1) rotateY(360deg);
+}
+
+.searchone__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 20px;
+}
+
+.searchone__bg__img {
+  margin-top: 20px;
+  width: 300px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 8px 13px #000000be;
+          box-shadow: 0px 8px 13px #000000be;
+}
+
+.searchone__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: -425px;
+  height: 424px;
+}
+
+.searchone__section .searchone__title {
+  text-align: center;
+  width: 280px;
+  color: white;
+  font-size: 20px;
+  margin: 0px 0px 5px 0px;
+  font-weight: 500;
+}
+
+.searchone__section .searchone__img {
+  border: 1px solid white;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 8px #ffffff80;
+          box-shadow: 0px 0px 8px #ffffff80;
+  height: 320px;
+  margin-top: 5px;
+}
+
+.edit__info__section,
+.searchone__info__section {
+  text-align: justify;
+  padding: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  width: 270px;
+  background: -webkit-gradient(linear, right top, left top, from(#1e334b), to(#0d1b2a));
+  background: linear-gradient(-90deg, #1e334b 0%, #0d1b2a 100%);
+  -webkit-box-shadow: 0px 8px 13px #000000be;
+          box-shadow: 0px 8px 13px #000000be;
+}
+
+.edit__info__section .searchone__type,
+.searchone__info__section .searchone__type {
+  color: #f9844a;
+  font-size: 10px;
+  margin: 2px 10px;
+}
+
+.edit__info__section .searchone__info,
+.searchone__info__section .searchone__info {
+  color: #ffffff;
+  font-size: 11px;
+  margin: 2px 10px;
+}
+
+.edit__info__section .searchone__botton__container,
+.searchone__info__section .searchone__botton__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.edit__info__section .searchone__botton__container .back__button,
+.searchone__info__section .searchone__botton__container .back__button {
+  color: white;
+  margin: 13px 13px 5px;
+  border: transparent;
+  width: 120px;
+  height: 30px;
+  border: #ffffff solid 1px;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.edit__info__section .searchone__botton__container .back__button:hover,
+.searchone__info__section .searchone__botton__container .back__button:hover {
+  font-weight: 600;
+  background-color: #f9844a;
+}
+
+.edit__info__section .searchone__botton__container .addFavorites,
+.searchone__info__section .searchone__botton__container .addFavorites {
+  margin: 13px 13px 5px;
+}
+
+.edit__button {
+  color: white;
+  margin: 10px;
+  border: transparent;
+  width: 120px;
+  height: 30px;
+  border: #ffffff solid 1px;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.5);
+  font-weight: 400;
+}
+
+.deleteFavorites {
+  padding: 0px;
+  padding-top: 3px;
+  margin: 12px;
+  height: 30px;
+  border: transparent;
+  background-color: transparent;
+}
+
+.deleteFavorites .reset__button,
+.deleteFavorites .deleteFavorites__button {
+  width: 25px;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.deleteFavorites .deleteFavorites__button:hover {
+  -webkit-filter: drop-shadow(0 0px 5px #ff0000);
+          filter: drop-shadow(0 0px 5px #ff0000);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.deleteFavorites .reset__button:hover {
+  -webkit-filter: drop-shadow(0 0px 5px #ff0000);
+          filter: drop-shadow(0 0px 5px #ff0000);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.deleteFavorites .deleteFavorites__button:active {
+  -webkit-transform: scale(1.1) rotateY(360deg);
+          transform: scale(1.1) rotateY(360deg);
+}
+
+.deleteFavorites .reset__button:active {
+  -webkit-transform: scale(1.1) rotateZ(-360deg);
+          transform: scale(1.1) rotateZ(-360deg);
+}
+
+.two__inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  text-align: center;
+}
+
+.edit__type {
+  color: #f9844a;
+  font-size: 10px;
+  width: 114px;
+  margin: 0px 10px 0px 10px;
+}
+
+.edit__input__type,
+.edit__input__genre,
+.edit__input__duration,
+.edit__input__rating,
+.edit__input__year {
+  margin: 5px 10px 5px 10px;
+  border: transparent;
+  width: 110px;
+  height: 15px;
+  border-radius: 10px;
+}
+
+.edit__input__director,
+.edit__input__cast {
+  margin: 5px 10px 5px 10px;
+  border: transparent;
+  height: 15px;
+  width: 90%;
+  border-radius: 10px;
+}
+
+.edit__input__resume {
+  width: 90%;
+  margin: 5px 10px 5px 10px;
+  border: transparent;
+  height: 60px;
+  border-radius: 10px;
+  text-align: start;
+}
+
+.edit__input__director::-webkit-input-placeholder,
+.edit__input__cast::-webkit-input-placeholder,
+.edit__input__type::-webkit-input-placeholder,
+.edit__input__genre::-webkit-input-placeholder,
+.edit__input__duration::-webkit-input-placeholder,
+.edit__input__rating::-webkit-input-placeholder,
+.edit__input__year::-webkit-input-placeholder {
+  color: #bababa;
+  padding-left: 3px;
+  font-size: 10px;
+}
+
+.edit__input__director:-ms-input-placeholder,
+.edit__input__cast:-ms-input-placeholder,
+.edit__input__type:-ms-input-placeholder,
+.edit__input__genre:-ms-input-placeholder,
+.edit__input__duration:-ms-input-placeholder,
+.edit__input__rating:-ms-input-placeholder,
+.edit__input__year:-ms-input-placeholder {
+  color: #bababa;
+  padding-left: 3px;
+  font-size: 10px;
+}
+
+.edit__input__director::-ms-input-placeholder,
+.edit__input__cast::-ms-input-placeholder,
+.edit__input__type::-ms-input-placeholder,
+.edit__input__genre::-ms-input-placeholder,
+.edit__input__duration::-ms-input-placeholder,
+.edit__input__rating::-ms-input-placeholder,
+.edit__input__year::-ms-input-placeholder {
+  color: #bababa;
+  padding-left: 3px;
+  font-size: 10px;
+}
+
+.edit__input__director::placeholder,
+.edit__input__cast::placeholder,
+.edit__input__type::placeholder,
+.edit__input__genre::placeholder,
+.edit__input__duration::placeholder,
+.edit__input__rating::placeholder,
+.edit__input__year::placeholder {
+  color: #bababa;
+  padding-left: 3px;
+  font-size: 10px;
+}
+
+.edit__info__section {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.edit__title {
+  text-align: center;
+  font-size: 10px;
+  margin: 0px 0px 5px 10px;
+  color: white;
+  text-align: center;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  .searchone__bg__img {
+    margin-right: 15px;
+  }
+  .searchone__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+  }
+  .searchone__section {
+    margin-top: 0px;
+    margin-left: -305px;
+  }
+  .edit__info__section,
+  .searchone__info__section {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 19px 0px 0px 0px;
+    height: 395px;
+  }
+  .edit__info__section {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .searchone__section {
+    margin-right: 15px;
+  }
+  .searchone__title {
+    font-size: 20px;
+  }
+  .search__flex {
+    width: 95vw;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+  }
+  .search__container {
+    margin: 10px;
+    height: 430px;
+  }
+  .two__inputs {
+    text-align: start;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
