--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,10 @@ main.main__container
         img.main__img(src="assets/form_bg.jpg")
         p.main__title1 WELLCOME TO
         p.main__title2 YOUR MOVIE DB
-        button.home__signup__button(type="click") SIGN UP
-        button.home__login__button(type="click") LOG IN
-        button.home__google__button(type="click") LOGIN WITH GOOGLE
+        a(href="http://localhost:3000/signup")
+            button.home__signup__button(type="click") SIGN UP
+        a(href="http://localhost:3000/login")
+            button.home__login__button(type="click") LOG IN
+        a(href="http://localhost:3000/")
+            button.home__google__button(type="click") LOGIN WITH GOOGLE
         img.main__gif(src="assets/gif_home_ok.gif", type="gif")
