--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -183,6 +183,13 @@ body {
   color: #e0e1dd;
   font-size: 10px;
 }
+.file__description {
+  color: white;
+  font-size: 10px;
+  margin: 0px 5px 0px 0px;
+  align-self: center;
+}
+.signup__mail__description,
 .pass__description,
 .mail__description {
   color: white;
@@ -197,6 +204,37 @@ body {
 .forgot__pass {
   color: white;
   font-size: 10px;
+}
+
+.signup__gif {
+  display: none;
+  width: 300px;
+  height: 30%;
+  opacity: 25%;
+}
+
+.signup__title {
+  font-size: 20px;
+  margin: 10px;
+  color: white;
+  text-align: center;
+  font-weight: 800;
+}
+.label__file__input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  color: #0d1b2a;
+  background-color: #e0e1dd;
+  width: 100px;
+  height: 20px;
+  font-weight: 400;
+  font-size: 12px;
+  transition: 0.3s;
+  margin: 10px 0px 10px;
+  border: none;
+  outline: 0;
 }
 //DASHBOARD
 .dashboard__search__button,
